hphp/hack/test/typecheck/references/call_time_reference2.php.exp
File "call_time_reference2.php", line 4, characters 13-15:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
